--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,7 @@
 // fonts
-$font: "Suisse Intl";
-$fontLight: "Suisse Intl - Light";
-$fontBold: "Suisse Intl - Semi Bold";
+$font: "Suisse Intl", "sans-serif";
+$fontLight: "Suisse Intl - Light", "sans-serif";
+$fontBold: "Suisse Intl - Semi Bold", "sans-serif";
 
 // colors
 $black: #333;
